feat: Added logic for global search by entities arts, authors and categories.
