# docs/swagger.yaml
@@ -1,5 +1,34 @@
 basePath: /
 definitions:
+  repository.Art:
+    properties:
+      authorId:
+        type: integer
+      content:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      title:
+        type: string
+      type:
+        description: enum (painting or photo or product or text)
+        type: string
+    type: object
+  repository.Author:
+    properties:
+      avatarId:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      userId:
+        type: integer
+    type: object
   repository.Category:
     properties:
       authorsIds:
@@ -118,6 +147,21 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  service.SearchResponse:
+    properties:
+      arts:
+        items:
+          $ref: '#/definitions/repository.Art'
+        type: array
+      authors:
+        items:
+          $ref: '#/definitions/repository.Author'
+        type: array
+      categories:
+        items:
+          $ref: '#/definitions/repository.Category'
+        type: array
     type: object
   service.UpdateTokensBody:
     properties:
@@ -1092,6 +1136,30 @@ paths:
       summary: Get category preview file by file name
       tags:
       - categories
+  /api/global-search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: The string by which the search will take place
+        in: query
+        name: query
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.SearchResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/sendResponse.Response'
+      summary: Global search for all entities
+      tags:
+      - global search
 securityDefinitions:
   ApiKeyAuth:
     in: header
